# pitchlite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: audio-accumulator.js  index.html  index.js  pitchlite.js  pitchlite.wasm
src/: mpm.cpp  pitchlite.hpp  ringbuffer.hpp  shared.cpp  wasm_glue.cpp  yin.cpp
test/: test_instruments.cpp  test_ringbuffer.cpp  test_sinewave.cpp  test_sinewave_ringbuffer.cpp  util.cpp  util.hpp
test/samples/: E3_44100_viola_degraded_0.txt  E3_44100_viola_degraded_4.txt
web/: index.html  index.js  pitchlite.js  pitchlite.wasm
